selfhost/test/typechecker/continue_error_location_module.out
Error at %FILE_NAME%:1:1
Invalid location for continue statement
  |  continue
     ^
Continue statements can only be used within loop bodies
